--- a/client/ui/head.html
+++ b/client/ui/head.html
@@ -4,6 +4,8 @@
 	<meta name="author" content="RinSer">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Simex</title>
+	<title>БИОМОДЕЛИ</title>
+
+	<link rel="icon" type="image/png" href="/simex_logo_vsmall.png" />
 
 </head>
