--- a/client/ui/login/login.html
+++ b/client/ui/login/login.html
@@ -21,7 +21,7 @@
 	<form>
 		<p>Email:<br> <input type="email" name="email"></p>
 		<p>Пароль:<br> <input type="password" name="password"></p>
-		<p class="login_error">Данные неверны</p>
+		<span class="login_error">Данные неверны</span>
 		<p><input type="submit" value="Войти" class="login_button"></p>
 	</form>
 
