About with editable text

--- a/client/ui/header/header.html
+++ b/client/ui/header/header.html
@@ -8,7 +8,7 @@
 
 	<div class="upper_header">
 		<section class="col-tm-3">
-			<a href="#"><img src="simex_logo.png" alt="Simex_logo" height="100px" class="logo_img"></a>
+			<a href="/"><img src="simex_logo.png" alt="Simex_logo" height="100px" class="logo_img"></a>
 		</section>
 		<section class="col-tm-3">
 			<div class="top_search">
@@ -39,12 +39,12 @@
 	<nav>
 
 		<div class="mobile_menu">
-			<a href="#"><img src="/simex_logo_white.png" height="50px"></a>
+			<a href="/"><img src="/simex_logo_white.png" height="50px"></a>
 			<button class="mob_menu_button">Меню</button>
 		</div>
 		<ul>
-			<li><a href="#">НОВОСТИ</a></li>
-			<li><a href="#">О КОМПАНИИ</a></li>
+			<li><a href="/">НОВОСТИ</a></li>
+			<li><a href="/about">О КОМПАНИИ</a></li>
 			<li><a href="#">БИОМОДЕЛИ</a></li>
 			<li><a href="#">ПРОДУКЦИЯ</a></li>
 			<li><a href="#">ВАЛИДНОСТЬ</a></li>
