--- a/client/ui/footer/footer.html
+++ b/client/ui/footer/footer.html
@@ -3,7 +3,7 @@
 	<footer>
 		<section class="col-ft-3"><p><i class="fa fa-copyright" aria-hidden="true"></i> OOO Simex</p></section>
 		<section class="col-ft-3"><p>+7(499)343-36-31 | <a href="mailto:simex.biomodel@gmail.com">simex.biomodel@gmail.com</a></p></section>
-		<section class="col-ft-3"><p>Engined by <a href="http://finengin.net">RinSer</a></p></section>
+		<section class="col-ft-3"><p>Engined by <a href="http://finengin.net" target="_blank">RinSer</a></p></section>
 	</footer>
 
 </template>
