--- a/client/ui/login/login.html
+++ b/client/ui/login/login.html
@@ -37,7 +37,7 @@
 		<p>Пароль:<br> <input id="password" type="password" name="password"></p>
 		<span class="login_error">Не совпадают!</span>
 		<p>Подтверждение:<br> <input id="pcheck" type="password" name="pcheck"></p>
-		<p><input type="submit" value="Зарегистрироваться" class="login_button"></p>
+		<p><input type="submit" value="Отправить" class="login_button"></p>
 	</form>
 
 </template>
