--- a/client/ui/header/header.html
+++ b/client/ui/header/header.html
@@ -58,9 +58,8 @@
 			<li>
 				<a class="products" href="#">ПРОДУКЦИЯ&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>
 				<ul class="products_ref">
-					<li><a href="#">Описание тренажера</a></li>
-					<li><a href="#">Инструкции по установке</a></li>
-					<li><a href="#">Информация</a></li>
+					<li><a href="/simulator">Описание тренажера</a></li>
+					<li><a href="/manual">Инструкции по установке</a></li>
 				</ul>
 			</li>
 			<li><a href="/validity">ВАЛИДНОСТЬ</a></li>
