--- a/client/ui/login/login.html
+++ b/client/ui/login/login.html
@@ -4,10 +4,14 @@
 		<div class="modal_window">
 			<i class="fa fa-times modal_exit" aria-hidden="true"></i>
 			<div class="modal_form">
-				{{#unless need_register}}
-					{{> login}}
+				{{#unless currentUser}}
+					{{#unless need_register}}
+						{{> login}}
+					{{else}}
+						{{> register}}
+					{{/unless}}
 				{{else}}
-					{{> register}}
+					{{> user_profile}}
 				{{/unless}}
 			</div>
 		</div>
@@ -32,12 +36,30 @@
 	<h2><i class="fa fa-user-plus"></i>&nbsp;Зарегистрироваться</h2>
 	<span class="register_error">Ошибка!</span>
 	<form>
-		<p>Имя:<br> <input type="text" name="name"></p>
+		<p>Имя:<br> <input type="text" name="firstName"></p>
+		<p>Отчество:<br> <input type="text" name="secondName"></p>
+		<p>Фамилия:<br> <input type="text" name="familyName"></p>
 		<p>Email:<br> <input type="email" name="email"></p>
+		<p>Адрес:<br> <input type="text" name="address"></p>
 		<p>Пароль:<br> <input id="password" type="password" name="password"></p>
 		<span class="login_error">Не совпадают!</span>
 		<p>Подтверждение:<br> <input id="pcheck" type="password" name="pcheck"></p>
 		<p><input type="submit" value="Отправить" class="login_button"></p>
 	</form>
+
+</template>
+
+<template name="user_profile">
+
+	<h2>Ваш профиль</h2>
+	<p><b>Имя:</b>&nbsp;{{profile.firstName}}</p>
+	{{#if profile.secondName}}
+		<p><b>Отчество:</b>&nbsp;{{profile.secondName}}</p>
+	{{/if}}
+	<p><b>Фамилия:</b>&nbsp;{{profile.familyName}}</p>
+	<p><b>Email:</b>&nbsp;{{profile.emails.[0].address}}</p>
+	{{#if profile.address}}
+		<p><b>Адрес:</b>&nbsp;{{profile.address}}</p>
+	{{/if}}
 
 </template>
