--- a/client/ui/biomodels/biomodels.html
+++ b/client/ui/biomodels/biomodels.html
@@ -51,9 +51,9 @@
 <template name="each_biomodel">
 
 	<div class="each_biomodel">
-		<a href="/biomodels/{{_id}}"><img style="float:right;" src="{{pic}}"></a>
+		<a href="/biomodels/{{_id}}"><img style="float:right; margin-top: 20px;" src="{{pic}}" height="75px"></a>
 		<h3><a href="/biomodels/{{_id}}">{{title}}</a></h3>
-		<a href="/biomodels/{{_id}}"><img src="{{photos.[0]}}"></a>
+		<a href="/biomodels/{{_id}}"><img src="{{photos.[0]}}" style="max-width: 100%;"></a>
 		<p><span class="each_biomodel_description">{{description}} – <b>{{price}}</b> р.</span></p>
 		<p class="trainer_price">Аренда тренажера SIMEX GI – 2 000 р.</p>
 		<button class="add_to_cart">Добавить в корзину</button>
@@ -77,8 +77,8 @@
 			{{/each}}
 		</div>
 		<div class="biomodel-col-2">
-			<p>{{> editableText context=biomodel options=optionsHelper field="description"}}</p>
-			<h4>Цена: {{> editableText context=biomodel options=optionsHelper field="price"}} р.<img style="float:right;" src="{{biomodel.pic}}"></h4>
+			<p>{{> editableText context=biomodel options=optionsHelper field="description"}}<img style="float:right; padding: 10px;" src="{{biomodel.pic}}" height="100px"></p>
+			<h4>Цена: {{> editableText context=biomodel options=optionsHelper field="price"}} р.</h4>
 			<p class="trainer_price">Аренда тренажера SIMEX GI – 2 000 р.</p>
 			<p class="trainer_link"><a href="#">Биомодель фиксируется в тренажер SIMEX GI</a></p>
 			<p>{{> editableText context=biomodel options=optionsHelper field="full_description"}}</p>
