--- a/client/ui/header/header.html
+++ b/client/ui/header/header.html
@@ -26,7 +26,7 @@
 					</p>
 				{{else}}
 					<p>
-						<span class="upper_hover"><i class="fa fa-user-md"></i>&nbsp;{{user_name}}&nbsp;</span>
+						<span class="upper_hover modal_on"><i class="fa fa-user-md"></i>&nbsp;{{user_name}}&nbsp;</span>
 						<span class="upper_hover logout"><i class="fa fa-sign-out"></i>Выйти</span>
 					</p>
 				{{/unless}}
