--- a/client/ui/header/header.html
+++ b/client/ui/header/header.html
@@ -56,10 +56,10 @@
 				</ul>
 			</li>
 			<li>
-				<a class="products" href="#">ПРОДУКЦИЯ&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>
+				<a class="products" href="#">ТРЕНАЖЕР&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>
 				<ul class="products_ref">
-					<li><a href="/simulator">Описание тренажера</a></li>
-					<li><a href="/manual">Инструкции по установке</a></li>
+					<li><a href="/simulator">Тренажер</a></li>
+					<li><a href="/manual">Начало работы</a></li>
 				</ul>
 			</li>
 			<li><a href="/validity">ВАЛИДНОСТЬ</a></li>
