--- a/client/ui/biomodels/biomodels.html
+++ b/client/ui/biomodels/biomodels.html
@@ -54,7 +54,7 @@
 	<div class="each_biomodel">
 		<a href="/biomodels/{{_id}}"><img style="float:right; margin-top: 20px;" src="{{pic}}" height="75px"></a>
 		<h3><a href="/biomodels/{{_id}}">{{title}}</a></h3>
-		<a href="/biomodels/{{_id}}"><img src="{{photos.[0]}}" style="max-width: 100%;"></a>
+		<a href="/biomodels/{{_id}}"><img src="{{photos.[0]}}" ></a>
 		<p><span class="each_biomodel_description">{{description}} – <b>{{price}}</b> р.</span></p>
 		<p class="trainer_price">Аренда тренажера SIMEX GI – 2 000 р.</p>
 		<button class="add_to_cart">Добавить к заказу</button>
