--- a/client/ui/simulators/simulators.html
+++ b/client/ui/simulators/simulators.html
@@ -39,7 +39,7 @@
 
 	<div class="each_simulator">
 		<h3>{{title}}</h3>
-		<img src="{{photo}}" style="max-width: 640px;">
+		<img src="{{photo}}" >
 		<p><span class="each_simulator_description">{{description}} – <b>{{price}}</b> р.</span></p>
 		<button class="add_to_cart">Добавить к заказу</button>
 		{{#if admin}}
