--- a/client/footer/footer.html
+++ b/client/footer/footer.html
@@ -2,7 +2,7 @@
 
 	<footer>
 		<section class="col-ft-3"><p><i class="fa fa-copyright" aria-hidden="true"></i> OOO Simex</p></section>
-		<section class="col-ft-3"><p>+7(499)343-36-31 | <a href="mailto:simex.biomodel@gmail.com">simex.biomodel@gmail.com</a></p></section>
+		<section class="col-ft-3"><p><a href="tel:{{tel}}">{{tel}}</a> | <a href="mailto:{{email}}">{{email}}</a></p></section>
 		<section class="col-ft-3"><p>Engined by <a href="http://finengin.net" target="_blank">RinSer</a></p></section>
 	</footer>
 
