--- a/client/admin/cforms/cforms.html
+++ b/client/admin/cforms/cforms.html
@@ -58,6 +58,7 @@
 	<section class="cform">
 		<a href="#" class="back">Назад</a>
 		<div>
+			<button class="delete">Удалить</button>
 			<label class="processed">
 				{{#if processed}}
 		        	<input type="checkbox" checked/>
