--- a/client/admin/orders/orders.html
+++ b/client/admin/orders/orders.html
@@ -58,6 +58,7 @@
 	<section class="order">
 		<a href="#" class="back">Назад</a>
 		<div>
+			<button class="delete">Удалить</button>
 			<label class="processed">
 				{{#if processed}}
 		        	<input type="checkbox" checked/>
@@ -94,6 +95,7 @@
 				</li>
 			{{/each}}
 			</ol>
+			<h2>Итого:&nbsp;{{total}}&nbsp;р.</h2>
 		</div>
 	</section>
 
