--- a/client/head.html
+++ b/client/head.html
@@ -2,9 +2,11 @@
 
 	<meta charset="UTF-8">
 	<meta name="author" content="RinSer">
+	<meta name="description" content="Биомодели и тренажеры для медицины SIMEX.">
+	<meta name="keywords" content="SIMEX, Simex, Симэкс, Биомодели, тренажеры, биологический, симулятор">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>БИОМОДЕЛИ</title>
+	<title>БИОМОДЕЛИ SIMEX</title>
 
 	<link rel="icon" type="image/png" href="/simex_logo_vsmall.png" />
 
