--- a/client/main.html
+++ b/client/main.html
@@ -14,6 +14,13 @@
 			{{> yield}}
 		</section>
 
+		<!-- Go to www.addthis.com/dashboard to customize your tools -->
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5652f905d55066d5"></script>
+		<!-- Mobile -->
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5652f905d55066d5"></script>
+
+
+
 		{{> footer}}
 	</div>
 
